--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     # download repo
     steps:
     - uses: actions/checkout@v4
@@ -22,6 +23,13 @@ jobs:
         distribution: 'temurin'
 
     # install browser
-    - 
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+    - name: Setup Firefox
+      uses: browser-actions/setup-firefox@v1.5.0
+  
+    # setup gradlew
+    - name: Setup gradlew
+      run: chmod +x gradlew
+
+    # execute gradle command for running cucumber test
+    - name: Execute test
+      run: ./gradlew webTest
