--- a/.github/workflows/web-ui-automation-workflow.yml
+++ b/.github/workflows/web-ui-automation-workflow.yml
@@ -47,5 +47,5 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v3.9.3
       with:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PERSONAL_TOKEN: ${{ secrets.TOKEN_PAGES_GITHUB }}
         PUBLISH_DIR: reports
